--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,9 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks  = # 5"
+    "number_of_weeks  = 5\n",
+    "number_of_weeks \n",
+    "# 5"
    ]
   },
   {
